force-app/main/default/objects/Commission_Tier__c/Commission_Tier__c.object-meta.xml
<CustomObject>
    <description>Defines tiered commission rates based on attainment thresholds within an incentive plan.</description>
    <label>Commission Tier</label>
    <nameField><label>Commission Tier Name</label><type>Text</type></nameField>
    <pluralLabel>Commission Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>