force-app/main/default/objects/Commission_Tier__c/fields/Max_Attainment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Max_Attainment_Pct__c</fullName>
    <label>Max Attainment Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>