force-app/main/default/objects/Commission_Tier__c/fields/Min_Attainment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Min_Attainment_Pct__c</fullName>
    <label>Min Attainment Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>