force-app/main/default/objects/Commission_Tier__c/fields/Period_Scope__c.field-meta.xml
<CustomField>
    <fullName>Period_Scope__c</fullName>
    <label>Period Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>false</default><label>Monthly</label></value>
            <value><fullName>Quarterly</fullName><default>false</default><label>Quarterly</label></value>
            <value><fullName>Annual</fullName><default>false</default><label>Annual</label></value>
            <value><fullName>Cumulative</fullName><default>false</default><label>Cumulative</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>