force-app/main/default/objects/Commission_Tier__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Commission Tiers</relationshipLabel>
    <relationshipName>Commission_Tiers</relationshipName>
</CustomField>