force-app/main/default/objects/Commission_Tier__c/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <label>Tier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>